clara me dijo que si

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 
 #blog {
   top: 80px;
-  background-color: #2196F3;
+  background-color: #fd8300;
 }
 
 #projects {
@@ -123,8 +123,8 @@
 
         </div>
 <div id="mySidenav" class="sidenav">
-  <a href="{% url 'busquedaProyecto' %}" id="about" >  Buscador Rapido  <span class="fa fa-search align-right"></span></a>
-
+  <a href="{% url 'busquedaProyecto' %}" id="about" >  Buscar   <span class="fa fa-search align-right"></span></a>
+<a href="{% url 'busquedaProyecto' %}" id="blog" >  Ayuda  <span class="fa fa-info-circle align-right"></span></a>
 </div>
     </header>
 
