clara me dijo que si

--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -29,7 +29,7 @@
     {% if results %}
       <ul>
       {% for book in results %}
-        <li>{{ book | escape }}</li>
+        <li><a href="{% url 'detalle_busqueda' %}?cod={{ book.id }}">{{ book | escape }}</a></li>
       {% endfor %}
       </ul>
     {% else %}
