la loca esta loca

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
         </div>
 <div id="mySidenav" class="sidenav">
   <a href="{% url 'busquedaProyecto' %}" id="about" >  Buscar   <span class="fa fa-search align-right"></span></a>
-<a href="{% url 'busquedaProyecto' %}" id="blog" >  Ayuda  <span class="fa fa-info-circle align-right"></span></a>
+<a href="{% url 'ayuda' %}" id="blog" >  Ayuda  <span class="fa fa-info-circle align-right"></span></a>
 </div>
     </header>
 
