la loca esta loca

--- a/templates/base.html
+++ b/templates/base.html
@@ -250,7 +250,9 @@ var table = $('#example').DataTable( {
         orderCellsTop: true,
          fixedHeader: true,
 
-        responsive: true,
+
+    responsive: false,
+
          dom: 'Bfrtip',
 
 
