--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -142,7 +142,7 @@ tr:nth-child(even){background-color: #f2f2f2}
             </td>
  <td>
      {% if item.restriccion_uso is not null %}
-     {{item.restriccion_uso}}
+   {{ item.lista_complementaria }} <p>  </p> {{item.restriccion_uso}}
  {% endif %}
  </td>
             </tr>
