--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -64,7 +64,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                 <td>{{item.contentracion}}</td>
                 <td>{{item.forma_farmaceutica}}</td>
                 <td> {% if item.via_de_administracion != "otros" %}
-<td>{{ item.envase_primario }}</td>
+            {{ item.via_de_administracion }}
             {% endif %}
             {% if item.via_de_administracion == "otros" %}
             {% endif %}
