--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -63,9 +63,9 @@ tr:nth-child(even){background-color: #f2f2f2}
 
                 <td>{{item.contentracion}}</td>
                 <td>{{item.forma_farmaceutica}}</td>
-                <td>{% if item.via_de_administracion != 'otros' %}
+                <td>{% ifnotequal item.via_de_administracion 'otros' %}
             {{ item.via_de_administracion }}
-            {% endif %}
+            {% endifnotequal %}
             {% if item.via_de_administracion == 'otros' %}
             {% endif %}
                 </td>
