la loca esta loca

--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -63,7 +63,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
                 <td>{{item.contentracion}}</td>
                 <td>{{item.forma_farmaceutica}}</td>
-                <td>{% ifnotequal item.via_de_administracion 'otros' %}{{ item.via_de_administracion }}{% endifnotequal %}{% if item.via_de_administracion == 'otros' %}{% endif %}</td>
+                <td>{% if item.via_de_administracion != 'otros'%}{{ item.via_de_administracion }}{% endif %}{% if item.via_de_administracion == 'otros' %}{% endif %}</td>
 
 <td>{{ item.envase_primario }}</td>
   <script>var contador='';</script>
