--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -55,7 +55,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
             <tr>
                 <td>{{ item.correlativo}}</td>
-                  <td>{{item.codigo_atc}}</td>
+                  <td style="font-family: Verdana;" >{{item.codigo_atc}}</td>
                  <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento}}</td>
 
 
