--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -33,7 +33,7 @@ tr:nth-child(even){background-color: #f2f2f2}
         <thead>
             <tr>
                 <th>No</th>
-                         <th>Código ATC</th>
+                         <th >Código ATC</th>
                      <th >Nombre del Medicamento</th>
 
 
@@ -55,7 +55,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
             <tr>
                 <td>{{ item.correlativo}}</td>
-                  <td>{{item.codigo_atc}}</td>
+                  <td style="font-family: Verdana;">{{item.codigo_atc}}</td>
                  <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento}}</td>
 
                 <td>{{item.contentracion}}</td>
