--- a/templates/listado_nacional_medicamentos.html
+++ b/templates/listado_nacional_medicamentos.html
@@ -56,7 +56,7 @@ tr:nth-child(even){background-color: #f2f2f2}
             <tr>
                 <td>{{ item.correlativo}}</td>
                   <td style="font-family: Verdana;" >{{item.codigo_atc}}</td>
-                 <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento}}</td>
+                 <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento |safe }}</td>
 
 
 
@@ -146,7 +146,8 @@ tr:nth-child(even){background-color: #f2f2f2}
       <p style="font-weight: bold;">{{ item.lista_complementaria }}</p>
  {% endif %}
      {% if item.restriccion_uso is not null %}
-  {{item.restriccion_uso}}
+  {{item.restriccion_uso | safe }}
+
  {% endif %}
  </td>
             </tr>
