--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -142,7 +142,7 @@ tr:nth-child(even){background-color: #f2f2f2}
       <p style="font-weight: bold;">{{ item.lista_complementaria }}</p>
  {% endif %}
      {% if item.restriccion_uso is not null %}
-  {{item.restriccion_uso}}
+  {{item.restriccion_uso | safe }}
  {% endif %}
  </td>
             </tr>
