--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <br> <br> <br> <br> <br> <br> <br>
+    {% for item in lista_medicamento %}
+        {{ item.contenido | safe }}
+    {% endfor %}
 {% endblock %}
