--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -8,7 +8,10 @@
     <h1>LISTADO NACIONAL DE MEDICAMENTOS ESENCIALES (LNME) 2018 - SECRETARÍA DE SALUD </h1>
 
     </div>
+    <section class="content " style="margin-left: 0.5%;margin-right: 0.5%;text-align: justify;"><p style="color: red;">Instrucciones de uso:</p><p>*En la parte izquierda de la tabla de consulta encontrara el botón PDF para generar un archivo de este tipo, en la parte derecha tiene un filtro que realiza búsquedas en todas las columnas encontrando coincidencias con lo que escribe, también se encuentran ubicados filtros en cada columna, puede filtrar en diferentes columnas a la misma vez, así puede realizar cruces de información de acuerdo con sus criterios de búsqueda.</p></section>
+
 <style>
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -32,7 +35,10 @@ tr:nth-child(even){background-color: #f2f2f2}
 } );</script>
 
 <section >
+
 <table id="example" class="display table" >
+
+<br>
         <thead>
             <tr>
                 <th>No</th>
