--- a/templates/index.html
+++ b/templates/index.html
@@ -74,14 +74,10 @@
 
 
 
-                  <h2 style="text-align: center;color: #2C3459">Listado Nacional de Medicamentos Esenciales</h2>
-                  <br>
-                  <p class="aligned">El Listado Nacional de Medicamentos Esenciales (LNME) de la Secretaría de Salud, cuenta con 531 presentaciones farmacéuticas equivalentes a 376 principios activos. El proceso de selección y análisis crítico de cada medicamento fue evaluado por un grupo multidisciplinario de profesionales sanitarios, cada decisión ha sido fundamentada a través de informes técnicos con la mejor evidencia científica disponible y de manera consensuada entre todos los profesionales involucrados.</p>
-             <br>
-              <p>Con el LNME, se pretender disminuir las barreras de acceso y asegurar el uso racional de los mismos, contribuir al compromiso del país de transitar hacia un sistema sanitario con acceso y cobertura universal en salud, así como al cumplimiento de los Objetivos de Desarrollo Sostenible, en su objetivo 3 de Salud y Bienestar. </p>
-              <br>
-                  <p>Adicionalmente, el Listado Nacional de Medicamentos Esenciales responde a lo planteado por la Secretaría de Salud, en su Plan Nacional de Salud, específicamente en el componente estratégico de Regulación del Sistema Nacional de Salud en su línea de acción del Diseño del Programa de Medicina Segura cuya meta es garantizar el acceso universal y oportuno a medicamentos esenciales de calidad. </p>
+        {% for items in portada %}
 
+            {{ items.contenido | safe }}
+                  {% endfor %}
               </div>
         </div>
     </section>
